# grimlet

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain  rustfmt.toml
core/: Cargo.toml
core/src/: emulator.rs  lib.rs
core/src/arm/: state.rs
core/src/arm/disasm/: instruction.rs
core/src/arm/state/: memory.rs
core/src/emulator/: video.rs
core/src/jit/: branch.rs
core/src/utils/: interval_tree.rs
core/tests/: asm_tests.rs
core/tests/asm/: factorial.gvasm  load_store.gvasm  shifts.gvasm
emulator/: Cargo.toml
emulator/src/: emulator.rs  jit.rs  main.rs
emulator/src/arm/: cpu.rs  disasm.rs
emulator/src/arm/disasm/: cons.rs
emulator/src/jit/: builder.rs
emulator/src/jit/builder/: alu.rs  branch.rs  flags.rs  reg_map.rs
macos/: Cargo.toml
macos/Grimlet/Grimlet/: ContentView.swift  GrimletApp.swift
macos/Grimlet/Grimlet.xcodeproj/: project.pbxproj
macos/src/: main.rs
src/: arm.rs  codegen.rs  compiler.rs  cpu.rs  emulator.rs  jit.rs  lib.rs  llvm_examples.rs  main.rs  state.rs  utils.rs
src/arm/: cpu.rs  disasm.rs  mod.rs  state.rs
src/arm/cpu/: memory.rs
src/arm/disasm/: code_block.rs  cons.rs  instruction.rs
src/arm/state/: memory.rs
src/arm/state/memory/: interval_tree.rs
src/emulator/: video.rs
src/jit/: alu.rs  branch.rs  builder.rs  cache.rs  compile.rs  flags.rs  instr.rs  load_store.rs  mod.rs  reg_map.rs  shift.rs  tests.rs
src/jit/builder/: alu.rs  branch.rs  flags.rs  load_store.rs  reg_map.rs
src/utils/: interval_tree.rs
src/utils/interval_tree/: node.rs  tree.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
tests/: asm_test.rs  asm_tests.rs  gen_test_data.py  interval_tree_test.rs
tests/asm/: bx.gvasm  cmp_flags.gvasm  cond.gvasm  factorial.gvasm  load_store.gvasm  mov_pc.gvasm  shifts.gvasm  test.gvasm.template
tests/programs/: bx.gba  bx.gvasm  factorial.gba  factorial.gvasm  flags.gba  flags.gvasm  load_store.gba  load_store.gvasm  mov_pc.gba  mov_pc.gvasm  shifts.gba  shifts.gvasm  stmdb.gvasm
