[workspace]
members = ["core", "macos"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
capstone = "0.13.0"
clap = { version = "4.6.0", features = ["derive"] }
dhat = "0.3.3"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
num = "0.4.3"
slab = "0.4.12"
uuid = { version = "1.23.0", features = ["v4"] }


