[package]
name = "core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "assemble"
test = false

[[bin]]
name = "disassemble"
test = false

[[bin]]
name = "benchmark_interval_tree"
test = false

[dependencies]
anyhow = "1.0.100"
capstone = "0.13.0"
clap = { version = "4.6.0", features = ["derive"] }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
num = "0.4.3"
slab = "0.4.12"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
dhat = "0.3.3"

[features]
dhat-heap = []  